# repo-time-machine

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
src/repo_time_machine/: __init__.py
src/repo_time_machine/agent/: __init__.py  answer.py  llm.py  pipeline.py  router.py
src/repo_time_machine/cli/: __init__.py  main.py
src/repo_time_machine/ingestion/: __init__.py  code_loader.py  git_history.py
src/repo_time_machine/retrieval/: __init__.py  code_retriever.py  embeddings.py  history_retriever.py  issue_retriever.py  store.py
tests/: test_agent.py  test_ingestion.py  test_issues.py  test_retrieval.py
