[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "repo-time-machine"
version = "0.1.0"
description = "Historical Agentic RAG for codebases"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["rag", "llm", "git", "agents", "developer-tools"]

dependencies = [
    "typer>=0.12",
    "gitpython>=3.1",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8",
    "PyGithub>=2.3",
    "requests>=2.31",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
]

[project.scripts]
rtm = "repo_time_machine.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
